--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="left-content">
                 <div class="profile-details">
                     <div class="profile">
-                        <img src="../download.jpg">
+                        <img src="http://127.0.0.1:5500/download.jpg">
                     </div>
                     <h2 class="name">Lipan kumar Dakua</h2>
                     <h4 class="designation">Full Stack Web Devloper</h4>
